<?xml version="1.0"?>
<package format="3">
  <name>bspline</name>
  <version>0.0.0</version>
  <description>The bspline package</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <!-- <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>plan_env</depend>
  <depend>pcl_conversions</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
