<?xml version="1.0"?>
<package format="3">
  <name>mavros_bridge</name>
  <version>0.0.0</version>
  <description>Fast-Planner SO3Command to MAVROS Bridge</description>
  <maintainer email="damiankryzia71@gmail.com">Damian Kryzia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
