<?xml version="1.0"?>
<package format="3">
  <version>0.0.0</version>
  <name>so3_control</name>
  <description >

     so3_control

  </description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/so3_control</url>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cmake_utils</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


