<?xml version="1.0"?>
<package format="3">
  <name>bspline_msgs</name>
  <version>0.0.0</version>
  <description>The bspline_msgs package</description>

  <maintainer email="xuhao@todo.todo">xuhao</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
