<?xml version="1.0"?>
<package format="3">
  <name>plan_env</name>
  <version>0.0.0</version>
  <description>The plan_env package</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>