<?xml version="1.0"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>The traj_utils package</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>poly_traj</depend>
  <depend>path_searching</depend>
  <depend>plan_env</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
