<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utils</name>
  <version>0.0.0</version>
  <description>Utilities</description>
  <maintainer email="dkryzia@cpp.edu">Damian Kryzia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
