<?xml version="1.0"?>
<package format="3">
  <name>local_sensing</name>
  <version>0.1.0</version>
  <description>
    render depth from depth
  </description>
  <author>Matia Pizzoli</author>
  <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>quadrotor_msgs</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
